--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -91,4 +91,62 @@
         app:layout_constraintTop_toBottomOf="@+id/bBack"
         app:layout_constraintVertical_bias="0.353" />
 
+    <Button
+        android:id="@+id/bLeftFwd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:onClick="btnPressLeftFwd"
+        android:text="LeftFwd"
+        app:layout_constraintHorizontal_bias="0.625"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/bStop"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="104dp" />
+
+    <Button
+        android:id="@+id/bLeftBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="btnPressLeftBack"
+        android:text="LeftBack"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/bBack"
+        app:layout_constraintTop_toBottomOf="@+id/bLeftFwd"
+        app:layout_constraintVertical_bias="0.315" />
+
+    <Button
+        android:id="@+id/bRightFwd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="104dp"
+        android:onClick="btnPressRightFwd"
+        android:text="RightFwd"
+        app:layout_constraintHorizontal_bias="0.568"
+        app:layout_constraintLeft_toRightOf="@+id/bFwd"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/bRightBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="210dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:onClick="btnPressRightBack"
+        android:text="RightBack"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.568"
+        app:layout_constraintLeft_toRightOf="@+id/bBack"
+        app:layout_constraintRight_toRightOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
